--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,10 @@
 @theme{
     /* Font Families */
     --font-oleo: 'Oleo Script', 'sans-serif';
-    --font-montserrat: 'Montserrat', 'sans-serif';
-    --font-poppins: 'Poppins', 'sans-serif';
     --font-inter: 'Inter', 'sans-serif';
 }
-
+/* --font-montserrat: 'Montserrat', 'sans-serif';
+--font-poppins: 'Poppins', 'sans-serif'; */
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
